# pySimBlocks

./: .gitignore  Authors.txt  README.md  doc.md  pyproject.toml
.github/workflows/: ci.yaml  python-tests.yaml
docs/: gui_doc.md
docs/User_Guide/: getting_started.md  tutorial_1_python.md  tutorial_2_gui.md
docs/uml/: pySimBlocks-GUI.uxf
examples/: README.md  example_closed_chain.py  example_observer.py  example_open_chain.py  example_siso.py  example_state_feedback.py
examples/basics/: observer.py
examples/dc_motor/: openloop.py  pid_block.py
examples/multi_rate/: example_ramp_gain.py  example_ramp_ss.py
examples/real_time/: block_diagram.py  controller_order5_linear.npz  layout.yaml  lmi.py  model.yaml  motors.py  observer_order5_linear.npz  parameters.py  parameters.yaml  run.py
examples/simulink/: order.py  pi.py  pid_backward.py  simulation.npz
examples/sofa/: Finger.py  closedloop.py  main.py  openloop.py  test.py
pySimBlocks/: __init__.py
pySimBlocks/api/: editor.py  helpers.py  project_export.py  pySimBlocks_blocks_registry.yaml  pySim_blocks_registry.yaml  run_sofa.py  ui_action.py  ui_blocks.py  ui_codegen.py  ui_plots_definition.py  ui_project_export.py  ui_run_sim.py  ui_simulation_settings.py  ui_workspace.py  ui_yaml.py
pySimBlocks/blocks/: __init__.py
pySimBlocks/blocks_metadata/: block_meta.py  parameter_meta.py
pySimBlocks/core/: __init__.py  block.py  block_source.py  config.py  fixed_time_manager.py  model.py  scheduler.py  simulator.py  task.py
pySimBlocks/generate/: cli.py  generate_model.py  generate_parameters.py  generate_run.py  generate_sofa_controller.py  helpers.py  pySimBlocks_blocks_index.yaml  pySim_blocks_index.yaml
pySimBlocks/gui/: editor.py  helpers.py  main_window.py  project_controller.py  ui_action.py  ui_blocks.py  ui_codegen.py  ui_connections.py  ui_diagram.py  ui_external_param.py  ui_plot_results.py  ui_plot_settings.py  ui_project_settings.py  ui_simulation_settings.py  ui_sofa.py
pySimBlocks/gui_qt/: editor.py  help.md  main_window.py  model.yaml  parameters.yaml  yaml_tools.py
pySimBlocks/project/: __init__.py  build_model.py  generate.py  generate_run_script.py  generate_sofa_controller.py  load_project_config.py  load_simulation_config.py  plot_from_config.py  pySimBlocks_blocks_index.yaml
pySimBlocks/real_time/: __init__.py  real_time_runner.py
pySimBlocks/tools/: blocks_registry.py  cli.py  (+3 more)
test/: test_delay.py  test_delay_vs_statespace.py  test_discrete_derivator.py  test_integrator.py  test_linear_state_space.py  test_ramp.py  test_sinusoidal.py
uml/: pySimBlocks-GUI.uxf
(+398 files in other folders)
