[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySimBlocks"
version = "0.1.0"
description = "A block-diagram simulation environment with PySide6 editor"
authors = [
    {name = "Antoine Alessandrini", email = "antoine.alessandrini@univ-lille.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "PySide6",
]

[project.scripts]
pysimblocks = "pySimBlocks.gui.editor:main"
pysimblocks-generate = "pySimBlocks.project.generate:main"
pysimblocks-update = "pySimBlocks.tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
examples = [
    "control",
]

tests = [
    "control",
]
